correct overflow hidden for product details page

--- a/src/pages/ProductDetailsPage/product-details-page.scss
+++ b/src/pages/ProductDetailsPage/product-details-page.scss
@@ -1,5 +1,9 @@
 @import '../../styles/utils/vars.scss';
 
+.product__details-page {
+  overflow-x: hidden;
+}
+
 .back__button {
   width: 24px;
   height: 24px;
